--- a/src/Languages/en/translation.json
+++ b/src/Languages/en/translation.json
@@ -7,5 +7,26 @@
   "Humidity": "Humidity",
   "Wind": "Wind",
   "City": "City",
-  "Table-Num": "Number of rows to call"
+  "Table-Num": "Number of rows to call",
+  "Now": "Now",
+  "Today-Highlight": "Today Highlight",
+  "Pressure": "Pressure",
+  "Monday": "Monday",
+  "Tuesday": "Tuesday",
+  "Wednesday": "Wednesday",
+  "Thursday": "Thursday",
+  "Friday": "Friday",
+  "Saturday": "Saturday",
+  "Sunday": "Sunday",
+  "light rain": "Light rain",
+  "broken clouds": "Broken clouds",
+  "moderate rain": "Moderate rain",
+  "overcast clouds": "Overcast clouds",
+  "scattered clouds": "Scattered clouds",
+  "clear sky": "Clear sky",
+  "few clouds": "Few clouds",
+  "light snow": "Light snow",
+  "snow": "Light snow",
+  "heavy snow": "Heavy snow",
+  "alert": "Please enter a valid city"
 }
