--- a/src/Languages/en/translation.json
+++ b/src/Languages/en/translation.json
@@ -28,5 +28,6 @@
   "light snow": "Light snow",
   "snow": "Light snow",
   "heavy snow": "Heavy snow",
-  "alert": "Please enter a valid city"
+  "alert": "Please enter a valid city",
+  "hafif yağmur": "hafif yağmur"
 }
